Renamed images processed with Topaz Gigapixel, which I will never upgrade because I'm sick of their deactivating my software and making me log in to fix it. I'll replace it with another image processor when the time comes.

--- a/css/hive.scss
+++ b/css/hive.scss
@@ -198,6 +198,16 @@ p#p5-next-to-the-valley {
     text-align: right;
 }
 
+p#p6-beautiful-strange-huge-wise {
+}
+
+p#p6-she-was-the-only-intelligent-being {
+}
+
+p#p6-the-hive-stated {
+    text-align: right;
+}
+
 main h3 {
     font-size: xx-large;
 }
